# rust-static-web-server

./: .gitignore  Cargo.toml  Dockerfile  Makefile
src/: config_parser.rs  csp.rs  enviroment.rs  main.rs
