[package]
name = "static-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { version = "0.5.1", features = ["fs", "set-header"] }
tokio = { version = "1", features = ["full"] }
axum = "0.7.4"
