[package]
name = "static-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { version = "0.5.2", features = ["fs", "set-header"] }
tokio = { version = "1.38.0", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0.203" }
serde_json = "1.0.117"
